<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/fragmentClickable">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dp_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/dp_24" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_test"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:background="@color/details"
            android:padding="@dimen/dp_100"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/profile_pic" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_52"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back_button" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_marginTop="-30dp"
            android:background="@drawable/bottom_sheet_background"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/dp_24" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/dp_24" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_description_item_title"
                    style="@style/DescriptionItemTitle"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_item_title"
                    app:layout_constraintBottom_toBottomOf="@id/txt_description_item_amount"
                    app:layout_constraintEnd_toStartOf="@id/txt_description_item_amount"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toTopOf="@id/txt_description_item_amount" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_description_item_amount"
                    style="@style/DescriptionItemAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_30"
                    android:text="@string/dummy_big_dollar"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_description_item_des"
                    style="@style/DescriptionItemDescription"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_30"
                    android:text="@string/dummy_description"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/txt_description_item_title" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_fav"
                    android:layout_width="@dimen/dp_64"
                    android:layout_height="@dimen/dp_64"
                    android:layout_marginBottom="@dimen/dp_32"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:srcCompat="@drawable/selector_shape_detail"
                    tools:ignore="ImageContrastCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_checkout"
                    style="@style/DescriptionAddToCart"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="@dimen/dp_64"
                    android:layout_marginStart="@dimen/dp_24"
                    android:background="@drawable/shape_detail_add_to_cart"
                    android:hint="@string/add_to_cart"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toBottomOf="@id/img_fav"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toEndOf="@id/img_fav"
                    app:layout_constraintTop_toTopOf="@id/img_fav" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
